--- a/.github/workflows/cr660x.yml
+++ b/.github/workflows/cr660x.yml
@@ -14,7 +14,7 @@ on:
     inputs:
       ip_addr:
         description: '固件 IP 地址 [可选]'
-        default: ''
+        default: '192.168.2.254'
 ### END
 
   #push:
