--- a/.github/workflows/cr660x.yml
+++ b/.github/workflows/cr660x.yml
@@ -57,19 +57,6 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@main
-      fetch-depth: 0
-      
-    - name: cache
-        uses:klever1988/cachewrtbuild@main
-        with:
-          #是否一并缓存.ccache目录，如果你启用了ccache。这是唯一的常用参数，其他三个用于除错，一般不需要调整
-          ccache: true
-          #是否缓存工具链目录
-          toolchain: true
-          #是否跳过工具链编译
-          skip: true
-          #清空缓存
-          clean: false
 
     - name: Initialization Define Info
       run: |
@@ -117,6 +104,12 @@ jobs:
         cd openwrt
         ./scripts/feeds update -a
         ./scripts/feeds install -a > /dev/null 2>&1
+      
+    - name: Cache
+      uses: klever1988/cachewrtbuild@main
+      with:
+        ccache: 'true'
+        prefix: ${{ github.workspace }}/openwrt
 
     - name: Run AutoBuild_DiyScript.sh
       run: |
