--- a/.github/workflows/cr660x.yml
+++ b/.github/workflows/cr660x.yml
@@ -5,7 +5,7 @@
 ###########################################################
 #
 
-name: cr660x
+name: cr660x-ZYZH自用
 
 ### 以下内容请保持不变 (请修改下方: 环境变量设置)
 on:
