--- a/.github/workflows/zyzhcr660x.yml
+++ b/.github/workflows/zyzhcr660x.yml
@@ -32,7 +32,7 @@ env:
 # 编译时调用的 [.config] 文件名称
   CONFIG_FILE: cr660x
 # 源码仓库:分支
-  DEFAULT_SOURCE: jj225511/lede1:master
+  DEFAULT_SOURCE: jj225511/op-lede:master
 # 上传固件到 Github Releases
   UPLOAD_RELEASES: true
 # 上传固件到 Github Artifacts
